# pi-launcher

./: CMakeLists.txt  README.md
launcher/: downloader.cpp  ui.cpp
runtime/: loader.cpp
shim/: filesystem_bridge.cpp  fs_bridge.cpp
shim/android/: activity_stub.cpp  jni_stub.cpp  libandroid_stub.cpp
shim/audio/: audio_pulse.cpp  pulse_bridge.cpp
shim/egl/: egl_bridge.cpp  egl_stub.cpp
